--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-show-more-text",
-  "version": "1.5.0",
+  "name": "@tandemchat/react-show-more-text",
+  "version": "1.5.1",
   "description": "The text surrounded by the component will be truncated. Anything surrounded by the component could be evaluated as text. The component react-show-more-text/ShowMoreText is fork of react-show-more/ShowMore, applied improvements, works with React 16.x.x, added onClick event.",
   "main": "lib/ShowMoreText.js",
   "files": [
@@ -16,7 +16,8 @@
     "report-coverage": "npm run coverage | coveralls",
     "test": "./node_modules/.bin/jest",
     "test:watch": "./node_modules/.bin/jest --watch",
-    "travis": "npm run compile && npm run test"
+    "travis": "npm run compile && npm run test",
+    "publish": "npm publish --access=public"
   },
   "repository": {
     "type": "git",
